# rsbind

./: .gitignore  Makefile.toml  README.md  build.sh  make_all.sh
template/template-bridge-android/: Cargo.toml  copy.sh
template/template-bridge-android/src/: lib.rs
toolchain/ndk-tool/: Cargo.toml  README.md
toolchain/ndk-tool/src/: error.rs  lib.rs
toolchain/rsbind/: Cargo.toml  README.md  build.rs
toolchain/rsbind-template/: Cargo.toml  README.md  build.rs
toolchain/rsbind-template/template-android/gradle/wrapper/: gradle-wrapper.properties
toolchain/rsbind-template/template-android/rustlib/: build.gradle
toolchain/rsbind-template/template-bridge-ios/: copy.sh
toolchain/rsbind-template/template-ios/: LICENSE
toolchain/rsbind-template/template-ios/Example/rustlib/: ViewController.swift
toolchain/rsbind-template/template-ios/Example/rustlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
toolchain/rsbind/src/: bridges.rs  cargo.rs  common.rs  config.rs  errors.rs  lib.rs  main.rs  unzip.rs
toolchain/rsbind/src/android/: artifact.rs  bridge.rs  callback.rs  config.rs  mod.rs  process.rs
toolchain/rsbind/src/ast/: mod.rs  types.rs
toolchain/rsbind/src/ast/contract/: desc.rs  mod.rs  parser.rs  test.rs
toolchain/rsbind/src/ast/imp/: desc.rs  parser.rs
toolchain/rsbind/src/base/: artifact.rs  bridge.rs  lang.rs  mod.rs  process.rs
toolchain/rsbind/src/bridge/: file.rs  gen.rs  mod.rs  prj.rs
toolchain/rsbind/src/ios/: artifact.rs  bridge.rs  callback.rs  config.rs  mapping.rs  mod.rs  process.rs
toolchain/rsbind/src/ios/res/: swift_gen
toolchain/rsbind/src/jar/: arch.rs  config.rs  mod.rs  process.rs
toolchain/rsbind/src/java/: artifact.rs  artifact_j2r.rs  artifact_r2j.rs  bridge.rs  bridge_cb.rs  bridge_j2r.rs  bridge_r2j.rs  callback.rs  converter.rs  interface.rs  internal.rs  manager.rs  method_cb.rs  mod.rs  struct_.rs  types.rs  wrapper.rs
toolchain/rsbind/src/java/ty/: basic.rs  callback.rs  mod.rs  str.rs  struct_.rs  vec_byte.rs  vec_default.rs  vec_struct.rs  void.rs
toolchain/rsbind/src/js/: artifact.rs  bridge.rs  mod.rs
toolchain/rsbind/src/js/ty/: array.rs  big_int.rs  boolean.rs  callback.rs  converter.rs  mod.rs  number.rs  string.rs  struct_.rs
toolchain/rsbind/src/mac/: config.rs  process.rs
toolchain/rsbind/src/nodejs/: config.rs  process.rs
toolchain/rsbind/src/swift/: arg_cb.rs  artifact.rs  artifact_c2s.rs  artifact_r2s.rs  artifact_s2c.rs  artifact_s2r.rs  bridge.rs  bridge_c2r.rs  bridge_cb.rs  bridge_r2c.rs  bridge_r2s.rs  bridge_s2r.rs  callback.rs  converter.rs  internal.rs  manager.rs  mapping.rs  mod.rs  protocol.rs  return_cb.rs  struct_.rs  types.rs  wrapper.rs
toolchain/rsbind/src/swift/ty/: basic.rs  callback.rs  mod.rs  str.rs  struct_.rs  vec_base.rs  vec_default.rs  vec_struct.rs  void.rs
toolchain/rsbind/template/template-android/: settings.gradle
toolchain/rsbind/template/template-android/rustlib/src/main/: AndroidManifest.xml
toolchain/rsbind/template/template-bridge-android/: Cargo.toml
toolchain/rsbind/template/template-bridge-android/src/: lib.rs
toolchain/rsbind/template/template-bridge-ios/: Cargo.toml
toolchain/rsbind/template/template-bridge-ios/src/: lib.rs
toolchain/rsbind/template/template-bridge-jar/: Cargo.toml
toolchain/rsbind/template/template-bridge-jar/src/: lib.rs
toolchain/rsbind/template/template-bridge-mac/: Cargo.toml
toolchain/rsbind/template/template-bridge-mac/src/: lib.rs
toolchain/rsbind/template/template-bridge-nodejs/: Cargo.toml  build.rs
toolchain/rsbind/template/template-ios/: .travis.yml  README.md
toolchain/rsbind/template/template-ios/Example/rustlib/: AppDelegate.swift
toolchain/rsbind/template/template-ios/Example/rustlib.xcworkspace/: contents.xcworkspacedata
toolchain/rsbind/template/template-ios/Example/rustlib/Base.lproj/: LaunchScreen.xib
toolchain/rsbind/template/template-jar/: build.gradle  settings.gradle
toolchain/rsbind/template/template-jar/app/: build.gradle
toolchain/rsbind/template/template-jar/app/src/main/java/demo/: Main.java
toolchain/rsbind/template/template-jar/rustlib/: build.gradle
toolchain/rsbind/template/template-mac/: rustlib.podspec
toolchain/rsbind/template/template-mac/Example/: Podfile
toolchain/rsbind/template/template-mac/Example/rustlib.xcodeproj/xcshareddata/xcschemes/: rustlib-Example.xcscheme
toolchain/rsbind/template/template-nodejs/: package.json  tsconfig.json
toolchain/template/template-bridge-android/: Cargo.toml
tools-rsbind/: Cargo.toml
tools-rsbind/.test/: java_sample_contract.rs
tools-rsbind/src/: bridges.rs  build.rs  cargo.rs  config.rs  errors.rs  lib.rs  main.rs  test.rs  unzip.rs
tools-rsbind/src/android/: bridge.rs  callback.rs  config.rs  dest.rs  gen.rs  mod.rs  process.rs
tools-rsbind/src/ast/: mod.rs  types.rs
tools-rsbind/src/ast/contract/: desc.rs  parser.rs
tools-rsbind/src/ast/imp/: parser.rs
tools-rsbind/src/bridge/: c.rs  c_callback.rs  file.rs  gen.rs  java.rs  java_callback.rs  mod.rs  prj.rs
tools-rsbind/src/ios/: bridge.rs  callback.rs  config.rs  dest.rs  gen.rs  mod.rs  process.rs
tools-rsbind/src/ios/res/: swift_gen
(+250 files in other folders)
