# Just want to use cargo, you don't need to use it in real project.

[package]
name = "template"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com>"]
readme = "README.md"
description = "Template for rsbind"
license = "Apache-2.0"

[build-dependencies]
rsbind-build-script = "0.1.0"

[lib]
name = "mock_template"
path = ".mock/lib.rs"