[package]
name = "rsbind"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com>"]
edition = "2021"
readme = "README.md"
description = "provide tools to bind rust interface with other language and export library artifact directly."
license = "Apache-2.0"

[dependencies]
quote = "1.0.14"
proc-macro2 = "1.0.36"
cbindgen = "0.20.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
zip = "0.5.13"
fs_extra = "1.1.0"
toml = "0.5.1"
error-chain = "0.12.1"
ndk-build = "0.4.3"
rstgen = "0.1.0"
ndk-tool = "0.1.0"

[dependencies.syn]
version = "1.0.84"
default_features = false
features = ["parsing", "full", "extra-traits"]

[lib]
name = "rsbind_core"
path = "src/lib.rs"

[[bin]]
name = "rsbind"
path = "src/main.rs"
