[package]
name = "$(*521%-host_crate_underscore)_jar_bridge_prj"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com.com>"]

#[workspace]
#members = []

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
$(*521%-host_crate) = { path = "../../"}
jni = "0.19.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.0.0"
log = "0.4"

[features]
$(*521%-features)