[package]
name = "$(*521%-host_crate_underscore)_mac_bridge_prj"
version = "0.1.0"
authors = ["sidney.wang <sidney.wang@foxmail.com>"]

#[workspace]
#members = []

[lib]
crate-type = [ "lib", "staticlib" ]

[dependencies]
$(*521%-host_crate) = { path = "../../"}
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.4.0"

[features]
$(*521%-features)